Applies some minor fixes with spacing between sections and populates account page with skeleton structure

--- a/public_html/css/footer.css
+++ b/public_html/css/footer.css
@@ -1,5 +1,13 @@
 footer{
   border-top: 1px solid grey;
+  background-color: #646464;
+  color: white;
+  padding-bottom: 2rem;
+}
+
+footer h3, footer h4 {
+  color: white;
+  margin-bottom: 1rem;
 }
 address {
   font-style: normal;
